# AI-Reel_Extractor-Backend

./: .gitignore  README.md  alembic.ini  debug_bcrypt_fix.py  debug_test_env.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  router.py
app/core/: security.py
app/models/: user.py
app/schemas/: auth.py  common.py  user.py
app/tasks/: huey_config.py
tests/: conftest.py  test_auth.py
