[tool.poetry]
name = "reel-intelligence-backend"
version = "1.0.0"
description = "AI-powered video extraction platform"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.25"
# ... (rest of dependencies from requirements.txt)

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
# ... (rest from requirements-dev.txt)

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"